# sshpod

./: Cargo.toml  Dockerfile.bundle  Makefile  README.ja.md  README.md  clippy.toml  install.ps1  install.sh
.github/workflows/: ci.yml  e2e.yml  installers.yml  release.yml
src/: bundle.rs  cli.rs  embedded.rs  hostspec.rs  install.rs  keys.rs  kubectl.rs  main.rs  paths.rs  port_forward.rs  proxy.rs  proxy_io.rs  remote.rs
tests/data/: hello.tar.xz
