[package]
name = "sshpod"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "net", "io-util", "io-std", "time", "sync", "fs"] }
whoami = "1"
log = "0.4"
env_logger = "0.11"
flate2 = "1"
xz2 = "0.1"
